# python-playground

./: .gitignore  CLAUDE.md  pyproject.toml  run_ragas.py  runner.py  scorer.py  transformer.py
docker/: .env.example  docker-compose.yml  init-db.sh
examples/: sample.evalset.json
mcp_adk_demo/: .env.tmpl  Dockerfile  agent.py  fastapi_server.py  field_filter.py  mcp.http  mcp_server.py  openapi_spec.json  openapi_spec.yaml  openapi_spec_users.json  pyproject.toml
mcp_adk_demo/examples/: tasks.json  tasks.yaml
mcp_adk_demo/tools/: __init__.py  tasks.py  users.py
mcp_test_agent/: pyproject.toml  toolsets.py
mcp_test_api/: combined_app.py  db.py  main.py  pyproject.toml  tasks_app.py  users_app.py
ragas_eval/: PHOENIX.md  debug_phoenix.py  pyproject.toml  run_ragas.py
ragas_eval/ragas_eval/: __init__.py  loader.py  model.py  phoenix_reporter.py  runner.py  scorer.py
